[gd_scene format=3 uid="uid://cdoksexcakmop"]

[ext_resource type="PackedScene" uid="uid://y5a4e3ajuy2r" path="res://scenes/StonePlatform.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://datfp8kxjrjg" path="res://scenes/BlueShip.tscn" id="2"]
[ext_resource type="Script" uid="uid://bsuv2svmaqypq" path="res://scenes/PlatformBlue.gd" id="3"]
[ext_resource type="Script" uid="uid://x2rdmjyr1ttw" path="res://scenes/ObjectiveArea.gd" id="4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jsrw5"]
size = Vector2(1152, 31)

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(138.75, 79)

[node name="MainLevel" type="Node" unique_id=832108525]

[node name="PlatformBlue" type="Node2D" parent="." unique_id=1028510209]
position = Vector2(37, 565)
script = ExtResource("3")

[node name="StonePlatform" parent="PlatformBlue" unique_id=964098601 instance=ExtResource("1")]

[node name="StonePlatform2" parent="PlatformBlue" unique_id=1594265889 instance=ExtResource("1")]
position = Vector2(70, 0)

[node name="BlueShip" parent="." unique_id=150247224 instance=ExtResource("2")]
position = Vector2(92, 324)
rotation = 0.02213025
mass = 60.414
lock_rotation = true

[node name="KillZone" type="Area2D" parent="." unique_id=1785743131]
position = Vector2(78, 47)

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone" unique_id=131971097]
position = Vector2(501, 618.5)
shape = SubResource("RectangleShape2D_jsrw5")

[node name="KillZone2" type="Area2D" parent="." unique_id=1449468752]
position = Vector2(72, -638)

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone2" unique_id=140924562]
position = Vector2(501, 618.5)
shape = SubResource("RectangleShape2D_jsrw5")

[node name="ObjectiveArea" type="Area2D" parent="." unique_id=779178061]
script = ExtResource("4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveArea" unique_id=670694693]
position = Vector2(78, 47)
shape = SubResource("1")

[connection signal="body_entered" from="KillZone" to="PlatformBlue" method="_on_kill_zone_body_entered"]
[connection signal="body_entered" from="KillZone2" to="PlatformBlue" method="_on_kill_zone_body_entered"]
[connection signal="body_entered" from="ObjectiveArea" to="ObjectiveArea" method="_on_ObjectiveArea_body_entered"]
